Add link style to resources hero

--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -215,6 +215,12 @@
     color: $heading-color;
   }
 
+  .hero-content {
+    a {
+      border-bottom: 1px dashed $heading-color;
+    }
+  }
+
   h1 {
     font-size: $font-size-x-large;
   }
