--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -37,7 +37,11 @@
 
   img {
     max-width: 100%;
-    width: 100%;
+  }
+
+  .section__img {
+    display: flex;
+    justify-content: center;
   }
 }
 
