--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -103,7 +103,7 @@
 
   .card-link {
     background-repeat: no-repeat;
-    background-position: bottom 7px right;
+    background-position: bottom 7px right -2px;
     background-size: 140px;
   }
 
