--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -41,8 +41,16 @@
   }
 
   .section__img {
+    border: 1px solid $gray-20;
     display: flex;
     justify-content: center;
+    margin-bottom: 0;
+  }
+
+  .col-md-4 {
+    @include media-breakpoint-down(sm) {
+      margin-top: 1.875rem;
+    }
   }
 }
 
