--- a/_includes/header_brand.html
+++ b/_includes/header_brand.html
@@ -42,7 +42,7 @@
     {% if page.url contains "brand/outreach" %}
       nav-link--current
     {% endif %}"
-    href="/brand/outreach/intro/"
+    href="/brand/outreach/graphic-elements/"
     {% if page.url contains "brand/outreach" %}
       aria-current="page"
     {% endif %}
