Add illustration layout and content

--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -32,6 +32,11 @@
   .col-md-8 > .example {
     margin-top: 0;
   }
+
+  .caption {
+    margin-bottom: 0;
+    margin-top: 0.25rem;
+  }
 }
 
 .brand {
