--- a/_includes/ditap_instructors.html
+++ b/_includes/ditap_instructors.html
@@ -1,72 +1,15 @@
 <div class="image-list row">
+  {% for instructor in site.data.ditap.instructors %}
   <div class="col-sm-4 col-lg-3">
     <div class="employee-gradient employee-gradient__img">
-      <img class="employee-img" src="{{ site.baseurl }}/img/people/chris-cairns.jpg" alt="Chris Cairns">
+      <img class="employee-img" src="{{ site.baseurl }}/{{ instructor.photo }}" alt="{{ instructor.name }}">
     </div>
   </div>
   <div class="col-sm-8 col-lg-9">
-    <h3>Chris Cairns</h3>
+    <h3>{{ instructor.name }}</h3>
     <p>
-      Chris served as a White House Presidential Innovation Fellow, and
-      co-founded 18F. He started and built 18F’s influential acquisition
-      group, which specializes in digital acquisition methods. Chris is
-      known for pioneering 18F’s
-      <a href="/work/experience/agile-acquisition-framework/"
-        >agile acquisition framework</a
-      >, and for architecting the government’s first-ever
-      <a href="/work/experience/agile-delivery-services-marketplace/"
-        >agile vendor contract vehicle</a
-      >
-      using a tech challenge.
+      {{ instructor.description }}
     </p>
   </div>
-  <div class="col-sm-4 col-lg-3">
-    <div class="employee-gradient employee-gradient__img">
-      <img class="employee-img" src="{{ site.baseurl }}/img/people/dan-levenson.jpg" alt="Dan Levenson">
-    </div>
-  </div>
-  <div class="col-sm-8 col-lg-9">
-    <h3>Dan Levenson</h3>
-    <p>
-      Dan is a senior executive with
-      <a href="https://agile6.com/">Agile Six</a>. He previously served
-      as a certified digital acquisition expert and contracting officer
-      for the Centers for Medicare & Medicaid Services (CMS). At CMS,
-      Dan architected and managed a highly successful agile vendor
-      contract vehicle, which supports programs such as the Quality
-      Payment Program.
-    </p>
-  </div>
-  <div class="col-sm-4 col-lg-3">
-    <div class="employee-gradient employee-gradient__img">
-      <img class="employee-img" src="{{ site.baseurl }}/img/people/robert-read.jpg" alt="Robert Read, PhD">
-    </div>
-  </div>
-  <div class="col-sm-8 col-lg-9">
-    <h3>Robert Read, PhD</h3>
-    <p>
-      Robert served as a White House Presidential Innovation Fellow, and
-      co-founded 18F. Originally trained by agile pioneer Kent Beck,
-      Robert has over 15 years experience as an agile practitioner and
-      coach. He holds a PhD in computer science, and is best known for
-      writing a popular, multilingual guide on
-      <a href="https://github.com/braydie/HowToBeAProgrammer"
-        >how to be a programmer</a
-      >.
-    </p>
-  </div>
-  <div class="col-sm-4 col-lg-3">
-    <div class="employee-gradient employee-gradient__img">
-      <img class="employee-img" src="{{ site.baseurl }}/img/people/leslie-garner-franklin.jpg" alt="Leslie Garner Franklin">
-    </div>
-  </div>
-  <div class="col-sm-8 col-lg-9">
-    <h3>Leslie Garner Franklin</h3>
-    <p>
-      Leslie brings nearly two decades of experience in user research,
-      user experience design, product management, digital leadership,
-      and instructional design. She started her career at Teach For
-      America, and has worked for notable design firms such as EchoUser.
-    </p>
-  </div>
+  {% endfor %}
 </div>
