Add various updates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
   <nav class="navbar">
     <div class="navbar-flex-container">
       {% if page.title == "Home" %}
-      <h1><a class="navbar-logo" href="{{site.baseurl}}/">Skylight</a></h1>
+        <h1><a class="navbar-logo" href="{{site.baseurl}}/">Skylight</a></h1>
       {% else %}
-      <a class="navbar-logo" href="{{site.baseurl}}/{% if page.toolkit_name == "brand" %}brand/{% endif %}">Skylight</a>
+        <a class="navbar-logo" href="{{site.baseurl}}/">Skylight</a>
       {% endif %}
       <div
         class="navbar-toggler"
