--- a/_includes/header_brand.html
+++ b/_includes/header_brand.html
@@ -1,9 +1,20 @@
 <li class="nav-item">
+  <a
+    class="nav-link"
+    href="/brand/"
+    {% if page.url == "/brand/" %}
+      aria-current="page"
+    {% endif %}
+  >
+    <span>Overview</span>
+  </a>
+</li>
+<li class="nav-item">
   <a class="nav-link
     {% if page.url contains "brand/identity" %}
       nav-link--current
     {% endif %}"
-    href="/brand/identity/logo/"
+    href="/brand/identity/logos/"
     {% if page.url contains "brand/identity" %}
       aria-current="page"
     {% endif %}
