Update font size

--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -255,6 +255,12 @@
   }
 }
 
+.page-brand-illustration-principles {
+  p {
+    font-size: $font-size-medium;
+  }
+}
+
 .page--brand-outreach {
   .hero-banner {
     background-color: $red-200;
