Update color, link

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -35,6 +35,10 @@
   background-color: $sk-blue;
 }
 
+.bg-gray-darker {
+  background-color: $gray-200;
+}
+
 .bg-gray {
   background-color: $gray-light;
 }
