--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -180,18 +180,27 @@ $outline-light: 2px solid #f2f2f2;
   }
 }
 
-.tuition-card.tuition-card {
-  // higher specificity so it doesn't inheret link styles
-  @include border-radius($border-radius);
-  border: $card-border-width solid $card-border-color;
-  box-shadow: $card-box-shadow;
-  color: $body-color;
-  padding: 1.25rem;
+.tuition-card {
+  &:focus {
+    .tuition-card-note,
+    .tuition-card-meta {
+      color: $body-color;
+    }
+  }
 
-  &:hover {
+  &.tuition-card {
+    // higher specificity so it doesn't inheret link styles
+    @include border-radius($border-radius);
     border: $card-border-width solid $card-border-color;
-    box-shadow: none;
+    box-shadow: $card-box-shadow;
     color: $body-color;
+    padding: 1.25rem;
+
+    &:hover {
+      border: $card-border-width solid $card-border-color;
+      box-shadow: none;
+      color: $body-color;
+    }
   }
 }
 
