--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -114,6 +114,9 @@ $link-color: $brand-primary;
 $link-hover-color: $blue-100-a;
 $link-hover-decoration: none;
 
+// Misc
+$pink: #FF00CC;
+
 // Fonts
 $font-family-system: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
   Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
