--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -421,3 +421,40 @@
   padding-block: 4rem;
   width: 60px;
 }
+
+.brand-swatch {
+  font-family: $font-family-mono;
+
+  p {
+    color: $gray-100;
+    font-size: $font-size-xx-small;
+    line-height: 0;
+    margin-left: 1.5rem;
+    text-transform: uppercase;
+
+    &:first-of-type {
+      font-weight: bold;
+      margin-bottom: 0;
+      margin-top: 2rem;
+    }
+
+    &:last-of-type  {
+      display: inline-block;
+      margin-top: 0;
+    }
+  }
+
+  button {
+    cursor: pointer;
+    font-size: $font-size-xx-small;
+    padding: 0;
+  }
+}
+
+.swatch {
+  height: 137px;
+}
+
+.swatch-group {
+  flex: 1 1 auto;
+}
