--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -22,6 +22,7 @@ $green-100: #80b690;
 $green-200: #609c70;
 $green-300: #418152;
 $green-300-a: #407F51;
+$green-350: #295C30;
 
 $red-20: #f9e0de;
 $red-40: #f2c1be;
