--- a/_includes/hero_banner_brand.html
+++ b/_includes/hero_banner_brand.html
@@ -1,3 +1,8 @@
+{% assign heading = "p" %}
+{% if page.description %}
+  {% assign heading = "h1" %}
+{% endif %}
+
 <div class="
   {% if include.color %}
     bg-{{ include.color }}
@@ -11,12 +16,20 @@
     <div class="brand-hero__content hero-container grid-container justify-content-end py-6">
       <div class="row">
         <div class="col-md-6">
-          <p class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
-            {{ site.data.toolkits[page.sidenav].title }}
-          </p>
+          <{{ heading }} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
+            {% if page.description %}
+              {{ page.title }}
+            {% else %}
+              {{ site.data.toolkits[page.sidenav].title }}
+            {% endif %}
+          </{{ heading }}>
           <div class="hero-content mx-0 {% if include.text == 'dark' %}text-ink{% endif %}">
             <p>
-              {{ site.data.toolkits[page.sidenav].description_long }}
+              {% if page.description %}
+                {{ page.description }}
+              {% else %}
+                {{ site.data.toolkits[page.sidenav].description_long }}
+              {% endif %}
             </p>
           </div>
         </div>
