--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -242,7 +242,8 @@
 
   @include media-breakpoint-up(md) {
     background-position: bottom right;
-    background-size: initial;
+    // background-size: initial;
+    background-size: contain;
     height: 450px;
   }
 
@@ -289,8 +290,8 @@
     background-image: url("/img/hero-mobile-company.svg");
 
     @include media-breakpoint-up(md) {
-      background-image: url("/img/brand/hero/identity.svg");
-      background-size: initial;
+      background-image: url("/img/brand/hero/identity.png");
+      // background-size: initial;
     }
   }
 }
@@ -304,12 +305,12 @@
     background-image: url("/img/hero-mobile-work.svg");
 
     @include media-breakpoint-up(md) {
-      background-image: url("/img/brand/hero/writing.svg");
-      background-size: 50%;
+      background-image: url("/img/brand/hero/writing.png");
+      // background-size: 50%;
     }
 
     @include media-breakpoint-up(lg) {
-      background-size: initial;
+      // background-size: initial;
     }
   }
 
@@ -331,12 +332,12 @@
     background-image: url("/img/hero-mobile-careers.svg");
 
     @include media-breakpoint-up(md) {
-      background-image: url("/img/brand/hero/illustration.svg");
-      background-size: 55%;
+      background-image: url("/img/brand/hero/illustration.png");
+      // background-size: 55%;
     }
 
     @include media-breakpoint-up(lg) {
-      background-size: initial;
+      // background-size: initial;
     }
   }
 
@@ -361,7 +362,7 @@
 
     @include media-breakpoint-up(md) {
       background-image: none;
-      // background-image: url("/img/brand/hero/outreach.svg");
+      background-image: url("/img/brand/hero/outreach.png");
     }
   }
 
@@ -379,7 +380,7 @@
     background-image: url("/img/hero-mobile-connect.svg");
 
     @include media-breakpoint-up(md) {
-      background-image: url("/img/brand/hero/resources.svg");
+      background-image: url("/img/brand/hero/resources.png");
       // background-size: 38.5%;
     }
   }
