--- a/_includes/header_brand.html
+++ b/_includes/header_brand.html
@@ -1,5 +1,5 @@
 <li class="nav-item">
-  <a class="nav-link
+  <a class="nav-link nav-link--identity
     {% if page.url contains "brand/identity" %}
       nav-link--current
     {% endif %}"
@@ -12,7 +12,7 @@
   </a>
 </li>
 <li class="nav-item">
-  <a class="nav-link
+  <a class="nav-link nav-link--writing
     {% if page.url contains "brand/writing" %}
       nav-link--current
     {% endif %}"
@@ -25,7 +25,7 @@
   </a>
 </li>
 <li class="nav-item">
-  <a class="nav-link
+  <a class="nav-link nav-link--illustration
     {% if page.url contains "brand/illustration" %}
       nav-link--current
     {% endif %}"
@@ -38,7 +38,7 @@
   </a>
 </li>
 <li class="nav-item">
-  <a class="nav-link
+  <a class="nav-link nav-link--outreach
     {% if page.url contains "brand/outreach" %}
       nav-link--current
     {% endif %}"
@@ -51,7 +51,7 @@
   </a>
 </li>
 <li class="nav-item">
-  <a class="nav-link
+  <a class="nav-link nav-link--resources
     {% if page.url contains "brand/resources" %}
       nav-link--current
     {% endif %}"
