--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -570,6 +570,7 @@
       justify-content: center;
       font-size: $font-size-xx-small;
       font-weight: bold;
+      margin-top: 2px;
       background-color: $gray-80;
       border-radius: 100%;
       color: #fff;
