--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -577,3 +577,13 @@
     }
   }
 }
+
+.typography-example-1 {
+  p {
+    margin-bottom: 0;
+  }
+}
+
+.typography--text-block {
+  line-height: 1.3;
+}
