Reduce font size of explainer text

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -178,6 +178,10 @@ h6 {
   max-width: $prose-max-width !important;
 }
 
+.font-2xs {
+  font-size: $font-size-xx-small !important;
+}
+
 .font-xs {
   font-size: $font-size-x-small !important;
 }
