--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -54,43 +54,11 @@ image_description: Skylight toolkit banner showing a collection of different too
         {{ content }}
       </section>
 
-      {% assign items = site.data.toolkits[page.sidenav].toc %}
-      {% for item in items %}
-        {% if item.url == page.url %}
-          {% assign prev_i = forloop.index0 | minus: 1 %}
-          {% assign next_i = forloop.index0 | plus: 1 %}
-          <nav class="pagination-alt text-primary mt-5">
-            <div>
-              {% unless page.url == items.first.url %}
-              <a class="pagination-alt__step pagination-alt__step--previous" href="{{ items[prev_i].url }}">
-                <span><i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i></span>
-                <span>
-                  {% if page.toolkit_name == "brand" %}
-                    {{ items[prev_i].title }}
-                  {% else %}
-                    Previous<span class="d-none d-sm-inline"> section</span>
-                  {% endif %}
-                </span>
-              </a>
-              {% endunless %}
-            </div>
-            <div>
-              {% unless page.url == items.last.url %}
-                <a class="pagination-alt__step pagination-alt__step--next" href="{{ items[next_i].url }}">
-                  <span>
-                    {% if page.toolkit_name == "brand" %}
-                      {{ items[next_i].title }}
-                    {% else %}
-                      Next<span class="d-none d-sm-inline"> section</span>
-                    {% endif %}
-                  </span>
-                  <span><i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i></span>
-                </a>
-              {% endunless %}
-            </div>
-          </nav>
-        {% endif %}
-      {% endfor %}
+      {% if page.toolkit_name == "brand" %}
+        {% include pagination_brand.html %}
+      {% else %}
+        {% include pagination_toolkit.html %}
+      {% endif %}
       <button class="btn btn-primary btn--scroll-to-top" onclick="topFunction()" id="btn--scroll-to-top">
         <i class="far fa-long-arrow-up" aria-hidden="true"></i>
         <span class="">
