--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,9 @@
 
   {% assign page_url = page.url %}
 
-  {% if page.content_type == 'Toolkit' %}
+  {% if page.toolkit_name == "brand" %}
+    {% assign title = page.title | append: " | Skylight Brand Guidelines" %}
+  {% elsif page.content_type == 'Toolkit' %}
     {% assign title = page.title %}
   {% elsif page.title %}
     {% assign title = site_title | append: ' | ' | append: (page.title | xml_escape) %}
@@ -46,7 +48,7 @@
   {% elsif page.filter_type == "project" %}
     {% assign pn = page.name |  replace: "-", " " | capitalize_all %}
     {% assign description = "The projects " | append: pn | append: " has worked on." %}
-  
+
   {% elsif page.layout == "tag_filter" %}
     {% assign tf = page.slug | replace: '_', ' ' %}
     {% assign description = "The collection of blog posts associated with the tag: " | append: tf | append: "." %}
