--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -574,7 +574,7 @@
   cursor: pointer;
   font-size: $font-size-xx-small;
   padding: 0;
-  margin-top: -3px;
+  margin-top: -4px;
 }
 
 .swatch {
@@ -583,6 +583,10 @@
 
 .swatch--long {
   height: 40px;
+
+  + p .btn-copy-hex {
+    margin-top: -3px;
+  }
 }
 
 .swatch--vertical {
@@ -629,6 +633,10 @@
 .swatch__container--vertical {
   display: flex;
   margin-top: 1rem;
+
+  .btn-copy-hex {
+    margin-top: -6px;
+  }
 }
 
 .swatch__col {
