--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -105,7 +105,7 @@
 
     .grid__image {
       grid-column: 1;
-      grid-row: 1/span 2;
+      grid-row: 1 / span 2;
     }
 
     .grid__content {
@@ -204,7 +204,9 @@
     background-image: url("/img/logo-inverse.svg");
   }
 
-  .burger span, .burger span:before, .burger span:after {
+  .burger span,
+  .burger span:before,
+  .burger span:after {
     background: white;
   }
 
@@ -399,7 +401,7 @@
   .current,
   .pagination-alt__step,
   .subnav-col .nav-link:hover,
-  .subnav-col .nav-link:focus  {
+  .subnav-col .nav-link:focus {
     color: $color !important;
   }
 }
@@ -594,7 +596,7 @@
       margin-top: 2rem;
     }
 
-    &:last-of-type  {
+    &:last-of-type {
       display: inline-block;
       margin-top: 0;
     }
@@ -645,7 +647,7 @@
   flex: 1 1 auto;
   padding-inline: 0.5rem;
 
-  &:nth-last-child(-n+3) {
+  &:nth-last-child(-n + 3) {
     .hex-val {
       margin-bottom: 0;
     }
@@ -739,5 +741,23 @@
 
   [class^="col-"] {
     padding-inline: 8px;
+  }
+}
+
+.section__things-to-avoid {
+  .grid-col {
+    height: min-content;
+    text-align: center;
+  }
+
+  .grid__image {
+    display: grid;
+    grid-auto-rows: max-content;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1rem;
+
+    @include media-breakpoint-up(md) {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
